force-app/main/default/objects/Comment__c/Comment__c.object-meta.xml
<CustomObject>
    <label>Comment</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>