force-app/main/default/objects/Comment__c/fields/Answer_Components__c.field-meta.xml
<CustomField>
    <fullName>Answer_Components__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Answer_Components</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Comments2</relationshipName>
    <type>Lookup</type>
</CustomField>