force-app/main/default/objects/Comment__c/fields/Commented_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Commented_By_Name__c</fullName>
    <formula>Post_Comments__r.FirstName   + &apos; &apos; +  Post_Comments__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commented By Name</label>
    <type>Text</type>
</CustomField>