force-app/main/default/objects/Comment__c/fields/Post_Comments__c.field-meta.xml
<CustomField>
    <fullName>Post_Comments__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Post_Comments</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Comments</relationshipName>
    <type>Lookup</type>
</CustomField>