force-app/main/default/objects/Comment__c/validationRules/Response_date_is_needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Response_date_is_needed</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(  Response_Date__c  ) &amp;&amp; ISCHANGED(  Response__c  )</errorConditionFormula>
    <errorMessage>Please enter response date</errorMessage>
</ValidationRule>