force-app/main/default/objects/Comment__c/listViews/All_Comments.listView-meta.xml
<ListView>
    <fullName>All_Comments</fullName>
    <columns>NAME</columns>
    <columns>comments__c</columns>
    <columns>Response__c</columns>
    <columns>Approved__c</columns>
    <columns>Answer_Components__c</columns>
    <columns>Post_Comments__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Comments</label>
</ListView>